--- a/sass/layout/backbone.scss
+++ b/sass/layout/backbone.scss
@@ -5,6 +5,10 @@
     grid-template-rows: 100%;
     grid-template-columns: 22% 56% 22%;
     overflow: hidden;
-    visibility: hidden;
-    display: none;
+    @media only screen and (max-width:450px) {
+        &{
+            display: none;
+            visibility: hidden;
+        }
+    }
 }
