--- a/sass/mobile/mind/res-mind.scss
+++ b/sass/mobile/mind/res-mind.scss
@@ -5,6 +5,14 @@
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: repeat(2, 50%);
+    display: none;
+    visibility: hidden;
+    @media only screen and (max-width:450px) {
+        &{
+            display: grid;
+            visibility: visible;
+        }
+    }
     &--whatinmind {
         width: 100%;
         height: 100%;
