--- a/css/style.css
+++ b/css/style.css
@@ -1612,11 +1612,6 @@ body {
     visibility: hidden;
     display: none; } }
 
-@media only screen and (max-width: 840px) {
-  .hide-me-res--sm {
-    visibility: hidden;
-    display: none; } }
-
 @media only screen and (max-width: 790px) {
   .hide-me-res--sm {
     visibility: visible;
@@ -1786,6 +1781,10 @@ body {
   @media only screen and (max-width: 1100px) {
     .sidebar-con {
       width: 125%; } }
+  @media only screen and (max-width: 790px) {
+    .sidebar-con {
+      visibility: hidden;
+      display: none; } }
   .sidebar-con {
     scrollbar-width: auto;
     scrollbar-color: transparent transparent; }
@@ -3172,8 +3171,7 @@ body {
           object-fit: cover; }
           .res-post-con--grid--post--main--img--img {
             width: 100%;
-            height: 100%;
-            object-fit: cover; }
+            height: 100%; }
       .res-post-con--grid--post--footer {
         width: 100%;
         height: 100%; }
