--- a/sass/extra/extra.scss
+++ b/sass/extra/extra.scss
@@ -137,12 +137,12 @@
     }
     
     .hide-me-res--sm {
-        @media only screen and (max-width: 840px) {
-            & {
-                visibility: hidden;
-                display: none;
-            }
-        }
+        // @media only screen and (max-width: 840px) {
+        //     & {
+        //         visibility: hidden;
+        //         display: none;
+        //     }
+        // }
         @media only screen and (max-width:790px) {
             & {
                 visibility: visible;
