--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 .nav {
-  position: relative;
   background-color: #242526;
   width: 100vw;
   height: 8.5vh;
@@ -3227,3 +3226,21 @@ body {
                   font-weight: bold;
                   font-family: "Roboto";
                   margin-left: 0.5rem; }
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  font-size: 62.5%; }
+
+body {
+  box-sizing: border-box;
+  background-color: #18191A;
+  overflow-x: hidden; }
+  @media only screen and (max-width: 450px) {
+    body {
+      overflow: hidden; } }
