--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,5 +20,6 @@
 @import "./home/mobile/mind/res-mind.scss";
 @import "./home/mobile/post/res-post.scss";
 
-// groups pages links
-@import"./group/base/base.scss"
+// marketpace // shap pages links
+@import"./shop/base/base.scss";
+@import"./shop/layout/navbar.scss";
