--- a/sass/home/components/story.scss
+++ b/sass/home/components/story.scss
@@ -87,6 +87,7 @@
                 -ms-transform: scale(1.0);
                 -o-transform: scale(1.0);
                 &:hover {
+                    cursor: pointer;
                     transform: scale(1.1);
                     transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
                     -webkit-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -155,6 +156,7 @@
                 -ms-transform: scale(1.0);
                 -o-transform: scale(1.0);
                 &:hover {
+                    cursor: pointer;
                     transform: scale(1.1);
                     transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
                     -webkit-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
