--- a/sass/home/extra/extra.scss
+++ b/sass/home/extra/extra.scss
@@ -6,6 +6,7 @@
         border-bottom: 2px solid #2374e1;
         border-bottom-left-radius: 0%;
         &:hover {
+            cursor: pointer;
             background-color: transparent;
         }
     }
