--- a/sass/home/layout/navbar.scss
+++ b/sass/home/layout/navbar.scss
@@ -183,6 +183,9 @@
                         -ms-transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -o-transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
                         &:hover {
+                            cursor: pointer;
+
+                            cursor: pointer;
                             background-color: #4d4f50;
                             transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -webkit-transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -225,6 +228,9 @@
                         }
                     }
                     &:hover {
+                            cursor: pointer;
+
+                        cursor: pointer;
                         transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -webkit-transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -moz-transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -532,6 +538,9 @@
                         margin-left: 0.7rem;
                         margin-top: 1rem;
                         &:hover {
+                            cursor: pointer;
+
+                            cursor: pointer;
                             background-color: rgba(77, 79, 80, 0.7);
                             transition: all .2s linear;
                             -webkit-transition: all .2s linear;
@@ -736,6 +745,8 @@
                             -ms-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -o-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
                             &:hover {
+                            cursor: pointer;
+
                                 transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
                                 -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
                                 -moz-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -958,6 +969,8 @@
                         -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
                         &:hover {
+                            cursor: pointer;
+
                             transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1299,6 +1312,8 @@
                         -ms-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -o-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         &:hover {
+                            cursor: pointer;
+
                             transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -webkit-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -moz-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1332,6 +1347,8 @@
                         -ms-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -o-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         &:hover {
+                            cursor: pointer;
+
                             transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -webkit-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -moz-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1371,6 +1388,8 @@
                     -ms-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                     -o-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                     &:hover {
+                            cursor: pointer;
+
                         transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -webkit-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -moz-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1469,6 +1488,8 @@
                     -ms-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                     -o-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                     &:hover {
+                            cursor: pointer;
+
                         transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -webkit-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -moz-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1542,6 +1563,8 @@
                         -ms-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -o-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         &:hover {
+                            cursor: pointer;
+
                             transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -webkit-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -moz-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1604,6 +1627,8 @@
                         -ms-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -o-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         &:hover {
+                            cursor: pointer;
+
                             transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -webkit-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -moz-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1673,6 +1698,8 @@
                         -ms-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         -o-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                         &:hover {
+                            cursor: pointer;
+
                             transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -webkit-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -moz-transition: all .7s cubic-bezier(0.075, 0.82, 0.165, 1);
