--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,8 @@
     -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
     -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
     .icon-box-con:hover {
+      cursor: pointer;
+      cursor: pointer;
       background-color: #4d4f50;
       transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
       -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -170,6 +172,8 @@
     .porfile-box {
       display: none; } }
   .porfile-box:hover {
+    cursor: pointer;
+    cursor: pointer;
     transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
     -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
     -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -430,6 +434,8 @@
   margin-left: 0.7rem;
   margin-top: 1rem; }
   .social-con--social-box--container:hover {
+    cursor: pointer;
+    cursor: pointer;
     background-color: rgba(77, 79, 80, 0.7);
     transition: all .2s linear;
     -webkit-transition: all .2s linear;
@@ -613,6 +619,7 @@
       -ms-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
       -o-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1); }
       .create-con--grid-box:hover {
+        cursor: pointer;
         transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
         -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
         -moz-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -807,6 +814,7 @@
     -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
     -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1); }
     .messenger-con--middle-grid--msg-con:hover {
+      cursor: pointer;
       transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
       -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
       -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1113,6 +1121,7 @@
     -ms-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
     -o-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1); }
     .notification-con--btn-con--all-btn:hover {
+      cursor: pointer;
       transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       -webkit-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       -moz-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1144,6 +1153,7 @@
     -ms-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
     -o-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1); }
     .notification-con--btn-con--unread-btn:hover {
+      cursor: pointer;
       transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       -webkit-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       -moz-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1179,6 +1189,7 @@
   -ms-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
   -o-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1); }
   .notification-con--friend-request-con:hover {
+    cursor: pointer;
     transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
     -webkit-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
     -moz-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1267,6 +1278,7 @@
   -ms-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
   -o-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1); }
   .notification-con--earlier-post:hover {
+    cursor: pointer;
     transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
     -webkit-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
     -moz-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1334,6 +1346,7 @@
     -ms-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
     -o-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1); }
     .profile-con--author-con:hover {
+      cursor: pointer;
       transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       -webkit-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       -moz-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1390,6 +1403,7 @@
     -ms-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
     -o-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1); }
     .profile-con--feed-me-con:hover {
+      cursor: pointer;
       transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       -webkit-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       -moz-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1452,6 +1466,7 @@
     -ms-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
     -o-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1); }
     .profile-con--other-con:hover {
+      cursor: pointer;
       transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       -webkit-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
       -moz-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1510,6 +1525,7 @@ body {
   border-bottom: 2px solid #2374e1;
   border-bottom-left-radius: 0%; }
   .active-bottom:hover {
+    cursor: pointer;
     background-color: transparent; }
 
 .hide-me {
@@ -1829,6 +1845,7 @@ body {
       -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
       -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
       .sidebar-con--flex--box:hover {
+        cursor: pointer;
         background-color: rgba(77, 79, 80, 0.5);
         transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
         -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -1972,6 +1989,7 @@ body {
         -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
         -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
         .active-con--flex-con--flex--box:hover {
+          cursor: pointer;
           background-color: rgba(77, 79, 80, 0.5);
           transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
           -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -2138,6 +2156,7 @@ body {
         -ms-transform: scale(1);
         -o-transform: scale(1); }
         .main-con--story-con--grid--box--img:hover {
+          cursor: pointer;
           transform: scale(1.1);
           transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
           -webkit-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -2200,6 +2219,7 @@ body {
         -ms-transform: scale(1);
         -o-transform: scale(1); }
         .main-con--story-con--grid--normal-box--img:hover {
+          cursor: pointer;
           transform: scale(1.1);
           transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
           -webkit-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -2495,6 +2515,7 @@ body {
         -ms-border-radius: 0.8rem;
         -o-border-radius: 0.8rem; }
         .main-con--mind-section--grid--chose-section--live:hover {
+          cursor: pointer;
           background-color: rgba(77, 79, 80, 0.5);
           transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
           -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -2527,7 +2548,8 @@ body {
   justify-items: center;
   align-content: center;
   justify-content: center;
-  grid-gap: 0rem; }
+  grid-gap: 0rem;
+  position: relative; }
   @media only screen and (max-width: 1200px) {
     .active-line {
       width: 75%;
@@ -2587,6 +2609,7 @@ body {
     -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
     -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1); }
     .active-line--btn:hover {
+      cursor: pointer;
       background-color: rgba(77, 79, 80, 0.9);
       transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
       -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -2607,6 +2630,45 @@ body {
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%; }
+    .active-line--img--dot {
+      position: absolute;
+      margin-left: 2rem;
+      margin-top: 2.2rem;
+      height: 1.1rem;
+      width: 1.1rem;
+      border: 2px solid black;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+      background-color: #31a12c; }
+      .active-line--img--dot--second {
+        position: absolute;
+        height: 1.1rem;
+        width: 1.1rem;
+        border: 2px solid black;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        background-color: #31a12c;
+        margin-top: 3rem;
+        margin-left: -9.2rem; }
+      .active-line--img--dot--third {
+        position: absolute;
+        margin-left: 13rem;
+        margin-top: 2.4rem;
+        height: 1.1rem;
+        width: 1.1rem;
+        border: 2px solid black;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        background-color: #31a12c; }
 
 .post-con {
   width: 100%;
@@ -2709,6 +2771,7 @@ body {
               -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
               -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1); }
               .post-con--box--header--img-con--img--name-con--time:hover {
+                cursor: pointer;
                 transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
                 -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
                 -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -2832,6 +2895,7 @@ body {
       -ms-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
       -o-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1); }
       .post-con--reaction-con--box:hover {
+        cursor: pointer;
         transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
         -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
         -moz-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
