--- a/sass/home/components/activeline.scss
+++ b/sass/home/components/activeline.scss
@@ -18,6 +18,7 @@
     align-content: center;
     justify-content: center;
     grid-gap: 0rem;
+    position: relative;
     @media only screen and (max-width: 1200px) {
         & {
             width: 75%;
@@ -87,6 +88,7 @@
         -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
         -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
         &:hover {
+            cursor: pointer;
             background-color: rgba(77, 79, 80, 0.9);
             transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
             -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -112,5 +114,49 @@
         -moz-border-radius: 50%;
         -ms-border-radius: 50%;
         -o-border-radius: 50%;
+        &--dot{
+            position: absolute;
+            margin-left: 2rem;
+    margin-top: 2.2rem;
+            height: 1.1rem;
+            width: 1.1rem;
+            border: 2px solid black;
+            border-radius: 50%;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            background-color: #31a12c;
+        &--second{
+            position: absolute;
+         
+            height: 1.1rem;
+            width: 1.1rem;
+            border: 2px solid black;
+            border-radius: 50%;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            background-color: #31a12c;
+            margin-top: 3rem;
+            margin-left: -9.2rem;
+            
+        }
+        &--third{
+            position: absolute;
+            margin-left: 13rem;
+    margin-top: 2.4rem;
+            height: 1.1rem;
+            width: 1.1rem;
+            border: 2px solid black;
+            border-radius: 50%;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            background-color: #31a12c;
+        }
+        }
     }
 }
