--- a/sass/home/components/mind.scss
+++ b/sass/home/components/mind.scss
@@ -179,6 +179,7 @@
                 -ms-border-radius: 0.8rem;
                 -o-border-radius: 0.8rem;
                 &:hover {
+                    cursor: pointer;
                     background-color: rgba(77, 79, 80, 0.5);
                     transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
                     -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
