--- a/sass/home/components/postsection.scss
+++ b/sass/home/components/postsection.scss
@@ -110,6 +110,7 @@
                             -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
                             -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
                             &:hover {
+                                cursor: pointer;
                                 transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
                                 -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
                                 -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -278,6 +279,7 @@
             -ms-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
             -o-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
             &:hover {
+                cursor: pointer;
                 transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
                 -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
                 -moz-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
