--- a/sass/home/layout/sidebar.scss
+++ b/sass/home/layout/sidebar.scss
@@ -67,6 +67,8 @@
             -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
             -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
             &:hover {
+                cursor: pointer;
+
                 background-color: rgba(77, 79, 80, 0.5);
                 transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
                 -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
