--- a/sass/main-market.scss
+++ b/sass/main-market.scss
@@ -2,3 +2,4 @@
 @import"./shop/base/base.scss";
 @import"./shop/layout/navbar.scss";
 @import"./shop/function/function.scss";
+@import"./shop/layout/maincon.scss";
