--- a/sass/home/mobile/story/story-res.scss
+++ b/sass/home/mobile/story/story-res.scss
@@ -21,6 +21,27 @@ visibility: hidden;
         grid-template-columns: repeat(4, 25%);
         overflow-x: scroll;
         overflow-y: hidden;
+        & {
+            scrollbar-width: auto;
+            scrollbar-color: transparent transparent
+            }
+            /* Chrome, Edge, and Safari */
+            &::-webkit-scrollbar {
+            width: 3px;
+            height: 3px;
+            }
+            &::-webkit-scrollbar-track {
+            background: transparent;
+            }
+            &::-webkit-scrollbar-thumb {
+            background-color: grey;
+            border-radius: 10px;
+            border: 3px solid transparent;
+            -webkit-border-radius: 10px;
+            -moz-border-radius: 10px;
+            -ms-border-radius: 10px;
+            -o-border-radius: 10px;
+            }
         &--story-box {
             width: 100%;
             height: 100%;
