--- a/sass/main-market.scss
+++ b/sass/main-market.scss
@@ -3,3 +3,4 @@
 @import"./shop/layout/navbar.scss";
 @import"./shop/function/function.scss";
 @import"./shop/layout/maincon.scss";
+@import"./shop/components/sidebar__marketplace.scss";
