--- a/css/shop.css
+++ b/css/shop.css
@@ -57,3 +57,13 @@ body {
     background-color: green; }
     .main-con--grid--ox {
       border: 2px solid red; }
+
+.main-con--grid--sidebar {
+  background-color: #242526;
+  width: 100%;
+  height: 100%;
+  border-top: 1px solid rgba(128, 128, 128, 0.4); }
+  .main-con--grid--sidebar--fixed-part {
+    width: 100%;
+    height: 10rem;
+    background-color: red; }
