--- a/css/shop.css
+++ b/css/shop.css
@@ -12,6 +12,7 @@ body {
   box-sizing: border-box;
   background-color: #18191A;
   overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
   /* Chrome, Edge, and Safari */ }
   body {
     scrollbar-width: auto;
@@ -66,4 +67,25 @@ body {
   .main-con--grid--sidebar--fixed-part {
     width: 100%;
     height: 10rem;
-    background-color: red; }
+    background-color: red;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(2, 50%); }
+    .main-con--grid--sidebar--fixed-part--heading-part {
+      border: 2px solid blue;
+      display: grid;
+      grid-template-rows: 100%;
+      grid-template-columns: 70% 30%;
+      align-items: center;
+      justify-items: start;
+      align-content: center;
+      justify-content: center;
+      text-align: center; }
+      .main-con--grid--sidebar--fixed-part--heading-part--heading {
+        font-size: 2.4rem;
+        font-weight: 700;
+        color: #e4e6eb; }
+      .main-con--grid--sidebar--fixed-part--heading-part--setting-part {
+        border: 2px solid aqua; }
+    .main-con--grid--sidebar--fixed-part--search-part {
+      border: 2px solid fuchsia; }
