--- a/sass/shop/base/base.scss
+++ b/sass/shop/base/base.scss
@@ -14,6 +14,8 @@ body {
     box-sizing: border-box;
     background-color: #18191A;
     overflow-x: hidden;
+    font-family: 'Roboto', sans-serif;
+
         & {
     scrollbar-width: auto;
     scrollbar-color: transparent transparent
