--- a/sass/shop/components/sidebar__marketplace.scss
+++ b/sass/shop/components/sidebar__marketplace.scss
@@ -7,5 +7,31 @@
         width: 100%;
         height: 10rem;
         background-color: red;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(2,50%);
+        &--heading-part{
+            border: 2px solid blue;
+            display: grid;
+            grid-template-rows: 100%;
+            grid-template-columns: 70% 30%;
+            align-items: center;
+            justify-items: start;
+            align-content: center;
+            justify-content: center;
+            text-align: center;
+            &--heading{
+font-size: 2.4rem;
+font-weight:700;
+color: #e4e6eb;
+            }
+            &--setting-part{
+                border: 2px solid aqua;
+
+            }
+        }
+        &--search-part{
+            border: 2px solid fuchsia;
+        }
     }
 }
