--- a/css/shop.css
+++ b/css/shop.css
@@ -67,7 +67,7 @@ body {
   .main-con--grid--sidebar--fixed-part {
     width: 100%;
     height: 10rem;
-    background-color: red;
+    background-color: #242526;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: repeat(2, 50%); }
@@ -75,7 +75,7 @@ body {
       border: 2px solid blue;
       display: grid;
       grid-template-rows: 100%;
-      grid-template-columns: 70% 30%;
+      grid-template-columns: 88% 12%;
       align-items: center;
       justify-items: start;
       align-content: center;
@@ -84,8 +84,28 @@ body {
       .main-con--grid--sidebar--fixed-part--heading-part--heading {
         font-size: 2.4rem;
         font-weight: 700;
-        color: #e4e6eb; }
+        color: #e4e6eb;
+        margin-left: 1.4rem; }
       .main-con--grid--sidebar--fixed-part--heading-part--setting-part {
-        border: 2px solid aqua; }
+        width: 3.6rem;
+        height: 3.6rem;
+        display: grid;
+        align-items: center;
+        justify-items: start;
+        align-content: center;
+        justify-content: center;
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 50%; }
+        .main-con--grid--sidebar--fixed-part--heading-part--setting-part--icon {
+          -webkit-filter: invert(89%) sepia(6%) hue-rotate(185deg); }
     .main-con--grid--sidebar--fixed-part--search-part {
-      border: 2px solid fuchsia; }
+      border: 3px solid blue;
+      display: grid;
+      align-items: center;
+      justify-items: start;
+      align-content: center;
+      justify-content: center; }
+      .main-con--grid--sidebar--fixed-part--search-part--search {
+        width: 32.8rem;
+        height: 3.6rem;
+        background-color: rgba(255, 255, 255, 0.1); }
