search bar is not completed

--- a/css/shop.css
+++ b/css/shop.css
@@ -108,4 +108,16 @@ body {
       .main-con--grid--sidebar--fixed-part--search-part--search {
         width: 32.8rem;
         height: 3.6rem;
-        background-color: rgba(255, 255, 255, 0.1); }
+        border-radius: 5rem;
+        background-color: rgba(255, 255, 255, 0.1);
+        outline: none;
+        border: none; }
+        .main-con--grid--sidebar--fixed-part--search-part--search ::placeholder {
+          color: #b0b3b8;
+          font-size: 1.5rem; }
+        .main-con--grid--sidebar--fixed-part--search-part--search--icon {
+          position: absolute;
+          width: 1.6rem;
+          height: 3.6rem;
+          fill: #b0b3b8;
+          margin-left: 1.2rem; }
