--- a/sass/shop/components/sidebar__marketplace.scss
+++ b/sass/shop/components/sidebar__marketplace.scss
@@ -54,13 +54,26 @@
             justify-items: start;
             align-content: center;
             justify-content: center;
+
             &--search {
-                width: 32.8;
+                width: 32.8rem;
                 height: 3.6rem;
-              
+                border-radius: 5rem;
                 background-color: rgba(255, 255, 255, 0.1);
                 // border-radius: 50%;
-
+                outline: none;
+                border: none;
+                ::placeholder{
+                    color: #b0b3b8;
+                    font-size: 1.5rem;
+                }
+                &--icon{
+                    position: absolute;
+                    width: 1.6rem;
+                    height: 3.6rem;
+                    fill: #b0b3b8;
+                     margin-left: 1.2rem;
+                }
             }
         }
 
