--- a/sass/shop/base/base.scss
+++ b/sass/shop/base/base.scss
@@ -14,6 +14,7 @@ body {
     box-sizing: border-box;
     background-color: #18191A;
     overflow-x: hidden;
+    overflow-y: hidden;
     font-family: 'Roboto', sans-serif;
 
         & {
