--- a/sass/shop/components/sidebar__marketplace.scss
+++ b/sass/shop/components/sidebar__marketplace.scss
@@ -3,6 +3,9 @@
     width: 100%;
     height: 100%;
     border-top: 1px solid rgba(128, 128, 128, 0.4);
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 17% 83%;
 
     &--fixed-part {
         width: 100%;
@@ -11,12 +14,12 @@
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: repeat(2, 50%);
+        margin-top: 0.6rem;
 
         &--heading-part {
-            border: 2px solid blue;
             display: grid;
             grid-template-rows: 100%;
-            grid-template-columns: 88% 12%;
+            grid-template-columns: 84% 16%;
             align-items: center;
             justify-items: start;
             align-content: center;
@@ -48,12 +51,14 @@
         }
 
         &--search-part {
-            border: 3px solid blue;
+            border-bottom: 1px solid rgba(128, 128, 128, 0.3);
             display: grid;
             align-items: center;
             justify-items: start;
             align-content: center;
             justify-content: center;
+            margin-top: -1.5rem;
+            margin-left: -1.2rem;
 
             &--search {
                 width: 32.8rem;
@@ -63,20 +68,35 @@
                 // border-radius: 50%;
                 outline: none;
                 border: none;
-                ::placeholder{
+                padding-left: 3.1rem;
+                color: #e4e6eb;
+                font-family: "Roboto", sans-serif;
+                font-size: 1.6rem;
+                padding-top: 0.1rem;
+
+                &::placeholder {
+                    font-family: "Roboto", sans-serif;
                     color: #b0b3b8;
-                    font-size: 1.5rem;
+                    font-size: 1.6rem;
                 }
-                &--icon{
+
+                &--icon {
                     position: absolute;
                     width: 1.6rem;
                     height: 3.6rem;
                     fill: #b0b3b8;
-                     margin-left: 1.2rem;
+                    margin-left: 1.7rem;
                 }
             }
         }
-
     }
 
+    &--main-part {
+        width: 100%;
+        height: 100%;
+        background-color: greenyellow;
+        overflow-y: scroll !important;
+        overflow-x: hidden;
+
+    }
 }
