--- a/sass/shop/layout/maincon.scss
+++ b/sass/shop/layout/maincon.scss
@@ -1,7 +1,7 @@
 .main-con {
     width: 100vw;
     height: 91.5vh;
-    background-color: red;
+    overflow-y: hidden;
 
     &--grid {
         display: grid;
@@ -10,8 +10,5 @@
         width: 100%;
         height: 100%;
         background-color: green;
-        &--ox{
-            border: 2px solid red;
-        }
     }
 }
