--- a/sass/main-market.scss
+++ b/sass/main-market.scss
@@ -4,3 +4,4 @@
 @import"./shop/function/function.scss";
 @import"./shop/layout/maincon.scss";
 @import"./shop/components/sidebar__marketplace.scss";
+@import"./shop/layout/listening__sidebar.scss";
