--- a/sass/shop/components/sidebar__marketplace.scss
+++ b/sass/shop/components/sidebar__marketplace.scss
@@ -6,6 +6,7 @@
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 17% 83%;
+    position: relative;
 
     &--fixed-part {
         width: 100%;
@@ -51,7 +52,6 @@
         }
 
         &--search-part {
-            border-bottom: 1px solid rgba(128, 128, 128, 0.3);
             display: grid;
             align-items: center;
             justify-items: start;
@@ -89,14 +89,47 @@
                 }
             }
         }
+
+        &--divider {
+            background-color: rgba(255, 255, 255, 0.1);
+            width: 90%;
+            height: 0.1rem;
+            position: absolute;
+            margin-top: 9.5rem;
+            margin-left: 1.3rem;
+        }
     }
 
     &--main-part {
         width: 100%;
         height: 100%;
-        background-color: greenyellow;
+        border: 1px solid greenyellow;
         overflow-y: scroll !important;
         overflow-x: hidden;
+
+        & {
+            scrollbar-width: auto;
+            scrollbar-color: transparent transparent;
+        }
+
+        &::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: grey;
+            border-radius: 10px;
+            border: 3px solid transparent;
+            -webkit-border-radius: 10px;
+            -moz-border-radius: 10px;
+            -ms-border-radius: 10px;
+            -o-border-radius: 10px;
+        }
+
 
     }
 }
