--- a/css/shop.css
+++ b/css/shop.css
@@ -159,3 +159,16 @@ body {
       -moz-border-radius: 10px;
       -ms-border-radius: 10px;
       -o-border-radius: 10px; }
+
+.main-con--grid--sidebar--main-part--listening-part {
+  width: 100%;
+  height: 32rem;
+  border: 1px solid #0000ff;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(6, 16.6%);
+  padding-left: 0.5rem; }
+  .main-con--grid--sidebar--main-part--listening-part--active-box {
+    width: 100%;
+    height: 98%;
+    background-color: rgba(255, 255, 255, 0.1); }
