--- a/sass/shop/layout/listening__sidebar.scss
+++ b/sass/shop/layout/listening__sidebar.scss
@@ -1,5 +1,15 @@
 .main-con--grid--sidebar--main-part--listening-part{
     width: 100%;
-    height: 20rem;
-    background-color: #0000ff;
+    height: 32rem;
+    border:1px solid #0000ff;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(6,16.6%);
+    padding-left: 0.5rem;
+    &--active-box{
+        width: 100%;
+        height: 98%;
+        background-color: rgba(255, 255, 255, 0.1);
+
+    }
 }
